<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/gd_kinde_tech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:padding="10sp"
        android:text="@string/gd_kinde_tech"
        android:textColor="#000099"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:padding="10sp"
        android:text="@string/good_collect_system"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:textAlignment="center">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:text="@string/model"
            android:textSize="18dp" />

        <RadioGroup
            android:id="@+id/line_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_online"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/online"
                android:textSize="18dp" />

            <RadioButton
                android:id="@+id/radio_offline"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:text="@string/offline"
                android:textSize="18dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:text="@string/user_text"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/user"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingLeft="8sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:paddingLeft="12sp"
            android:text="@string/psw_text"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="210dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/colorLoginEditText"
            android:hint="@string/password"
            android:imeOptions="actionNone"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:paddingLeft="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnshape"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />

</LinearLayout>